--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       </div>
     </div>
 
+    <section>
+      <h2>Result</h2>
+    </section>
+
     <script src="index.js"></script>
   </body>
 </html>
